<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/details"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:textSize="@dimen/search"
		        android:textAlignment="center"
		        android:gravity="center"
		        android:text="@string/detail" />
    
		    <com.android.volley.toolbox.NetworkImageView
		  	  android:id="@+id/detailImage"
			  android:layout_width="match_parent"
			  android:layout_height="200dp" 
			  android:adjustViewBounds="true"
			  android:layout_marginTop="20dp"
			  android:scaleType="centerCrop"/>
		    
		    <RelativeLayout
		        android:id="@+id/title_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/title_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/title_detail" />
		        
			    <TextView
			      android:id="@+id/name"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/title_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
		    
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30"
		       />
		
		    <RelativeLayout
		        android:id="@+id/year_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="horizontal" >
		    
		    	<TextView
			      android:id="@+id/year_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:textStyle="bold"
			      android:layout_alignParentLeft="true"
			      android:text="@string/year_detail" />
		        
			    <TextView
			      android:id="@+id/year"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
			
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		    <RelativeLayout
		        android:id="@+id/duration_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="horizontal" >
		    
		    	<TextView
			      android:id="@+id/duration_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/duration_detail" />
		        
			    <TextView
			      android:id="@+id/duration"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			</RelativeLayout>
		   
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		    <RelativeLayout
		        android:id="@+id/genre_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/genre_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/genre_detail" />
		        
			    <TextView
			      android:id="@+id/genre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/genre_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
		    
		    
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		    <RelativeLayout
		        android:id="@+id/language_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/language_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/language_detail" />
		        
			    <TextView
			      android:id="@+id/language"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/language_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
		    </RelativeLayout>
		    
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		     <RelativeLayout
		        android:id="@+id/country_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="horizontal" >
		    
		    	<TextView
			      android:id="@+id/country_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/country_detail" />
		        
			    <TextView
			      android:id="@+id/country"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
			
		     <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		    <RelativeLayout
		        android:id="@+id/rating_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="horizontal" >
		    
		    	<TextView
			      android:id="@+id/rating_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/rating_detail" />
		        
			    <TextView
			      android:id="@+id/rating"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
		    
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		    
		     <RelativeLayout
		        android:id="@+id/director_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="horizontal" >
		    
		    	<TextView
			      android:id="@+id/director_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:textStyle="bold"
			      android:layout_alignParentLeft="true"
			      android:text="@string/director_detail" />
		        
			    <TextView
			      android:id="@+id/director"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
		    
		     <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		     
		     <RelativeLayout
		        android:id="@+id/actors_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/actors_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:textStyle="bold"
			      android:layout_alignParentLeft="true"
			      android:text="@string/actors_detail" />
		        
			    <TextView
			      android:id="@+id/actors"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/actors_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>

		     
		     <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		     
		     
		     <RelativeLayout
		        android:id="@+id/writer_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/writer_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:textStyle="bold"
			      android:layout_alignParentLeft="true"
			      android:text="@string/writer_detail" />
		        
			    <TextView
			      android:id="@+id/writer"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/writer_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />   
			</RelativeLayout>
	 
		     <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		     
		      <RelativeLayout
		        android:id="@+id/plot_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/plot_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:textStyle="bold"
			      android:layout_alignParentLeft="true"
			      android:text="@string/plot_detail" />
		        
			    <TextView
			      android:id="@+id/plot"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/plot_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			    
			</RelativeLayout>
		    
		    <View 
		      android:layout_width="wrap_content"
		      android:layout_height="1dp"
		      android:layout_marginLeft="10dp"
		      android:layout_marginRight="10dp"
		      android:background="@color/color_black_30" />
		
		    <RelativeLayout
		        android:id="@+id/award_layout"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:orientation="vertical" >
		    
		    	<TextView
			      android:id="@+id/award_pre"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:textSize="@dimen/search_title"
			      android:layout_marginLeft="10dp"
			      android:layout_alignParentLeft="true"
			      android:textStyle="bold"
			      android:text="@string/award_detail" />
		        
			    <TextView
			      android:id="@+id/award"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_below="@id/award_pre"
			      android:layout_marginLeft="15dp"
			      android:layout_alignParentRight="true"
			      android:layout_marginRight="10dp"
			      android:textSize="@dimen/search_title" />
			</RelativeLayout>

	    </LinearLayout>
	    
    </ScrollView>
</LinearLayout>